Update x-pack/plugin/ml/src/test/java/org/elasticsearch/xpack/ml/inference/deployment/MlPlatformArchitecturesUtilTests.java
Co-authored-by: David Roberts <dave.roberts@elastic.co>